<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditAttivitaActivity">

    <!-- Here you put the rest of your current view-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attivita"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioG"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnBath"
                android:drawableRight="@drawable/baseline_bathtub_black_36"
                android:onClick="radio_button_bathclick"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEat"
                android:drawableRight="@drawable/baseline_local_dining_black_36"
                android:onClick="radio_button_click"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnChange"
                android:drawableRight="@drawable/baseline_baby_changing_station_black_36"
                android:onClick="radio_button_click"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GIORNO"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ORA"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TimePicker
            android:id="@+id/tp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llDurata">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DURATA"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDurata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/durata"
                android:inputType="number" />

        </LinearLayout>

        <EditText
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/note" />

        <Button
            android:id="@+id/btnCanecl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Annulla" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salva" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Elimina" />

    </LinearLayout>

</ScrollView>
